[project]
name = "analyse-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "marimo>=0.19.4",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "transformers>=4.46.0",
    "torch>=2.5.1",
    "scikit-learn>=1.6.1",
    "tqdm>=4.67.1",
    "sentencepiece>=0.2.0",
]
